# fast-pc

./: CMakeLists.txt  README.md
include/: engine.hpp  pc.hpp  rule.hpp
src/: main.cpp
